Initial commit: JavaFX Todo Application